# oransim

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GITHUB_SETUP.md  HANDOFF.md  LICENSE  NOTICE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SETUP.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
assets/: README.md
backend/oransim/: __init__.py  api.py  api_helpers.py  api_schemas.py  api_state.py  scripts_helpers.py
backend/oransim/agents/: __init__.py  agent_provider.py  async_pool.py  brand_memory.py  calibration.py  competitor_roi.py  content_type_coef.py  cross_platform.py  discourse.py  final_report.py  group_chat.py  kol_content_match.py  kol_optimizer.py  llm_dedup.py  scenario_compare.py  schema_outputs.py  search_elasticity.py  sloc.py  soul.py  soul_llm.py  statistical.py  stream_memory.py  tag_lift.py  verdict.py
backend/oransim/agents/llm_providers/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py  qwen_dashscope.py  registry.py
backend/oransim/api_routers/: __init__.py  adapters.py  analysis.py  health.py  predict.py  sandbox.py  ueb.py  v2.py  ws.py
backend/oransim/benchmarks/: __init__.py  orancbench.py
backend/oransim/causal/: __init__.py  abduction.py  cate.py  counterfactual.py  fixed_point.py  scm.py
backend/oransim/config/: niches.py
backend/oransim/data/: __init__.py  creatives.py  fan_profile.py  kols.py  macro.py  platforms.py  population.py  world_events.py
backend/oransim/data/schema/: __init__.py  canonical.py
backend/oransim/data/synthesizers/: __init__.py  base.py  bayes_net.py  ipf.py  registry.py
backend/oransim/diffusion/: __init__.py  base.py  hawkes.py  legacy_hawkes.py  neural_hawkes.py  registry.py
backend/oransim/runtime/: __init__.py  embedding_bus.py  graph.py  http_client.py  real_embedder.py
backend/oransim/sandbox/: __init__.py  engine.py
backend/oransim/world_model/: __init__.py  base.py  budget.py  lightgbm_quantile.py  registry.py  transformer.py
backend/scripts/: gen_orancbench.py  gen_synthetic_data.py  run_orancbench.py  train_lightgbm_demo.py  train_neural_hawkes.py  train_transformer_wm.py
data/: niches.json
data/benchmarks/: orancbench_v0_1.jsonl
data/models/: data_card.md  model_card.md  world_model_demo.pkl
data/synthetic/: event_streams_v0_1.jsonl  notes_v3.json  scenarios_v0_1.jsonl  synthetic_fan_profiles.json  synthetic_kols.json
docker/: Dockerfile  docker-compose.yml
docs/: index.md
docs/en/: architecture.md  quickstart.md
docs/en/benchmarks/: README.md
docs/en/schemas/: README.md
docs/zh/: quickstart.md
examples/: 01_quickstart.ipynb  02_counterfactual.ipynb  03_custom_platform.ipynb  04_soul_agents.ipynb
frontend/: app.js  index.html  styles.css
frontend/js/: api.js  cascade.js  hero.js  society.js  tabs.js
tests/: test_causal_invariants.py  test_llm_providers.py  test_persona_enrichment.py  test_quickstart_e2e.py  test_schema_outputs_real.py  test_smoke.py
