[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oransim"
version = "0.2.0a0"
description = "Causal Digital Twin for Marketing at Scale — Predict any marketing decision before you spend a dollar."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "OranAI Ltd.", email = "cto@orannai.com" },
    { name = "Oransim contributors" }
]
requires-python = ">=3.10"
keywords = [
    "causal-inference",
    "digital-twin",
    "marketing-ai",
    "agent-based-modeling",
    "counterfactual-reasoning",
    "hawkes-process",
    "structural-causal-model",
    "llm-agents",
    "simulation",
    "social-media-analytics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pydantic>=2.6",
    "lightgbm>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "networkx>=3.0",  # scm graph-shape invariant tests
    "httpx>=0.27",  # required by fastapi.testclient.TestClient (starlette 0.37+)
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
]
# Research-grade world model + diffusion (Causal Transformer, Causal Neural Hawkes).
# Install with: pip install 'oransim[ml]'
# Omitting this extra keeps the LightGBM + parametric Hawkes baselines fully usable.
ml = [
    "torch>=2.2",
    "einops>=0.7",
]

[project.urls]
Homepage = "https://oran.cn/oransim"
Documentation = "https://github.com/OranAi-Ltd/oransim#readme"
Repository = "https://github.com/OranAi-Ltd/oransim"
Issues = "https://github.com/OranAi-Ltd/oransim/issues"
Changelog = "https://github.com/OranAi-Ltd/oransim/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["oransim*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# Deliberately ignored:
# - N803/N806/N814/N815/N817: ML / causal convention (K=classes, N=seq, B=batch,
#   O/C/E/A/N for bigfive, and common short names in sampling code).
# - B007: intentionally unused loop control variables (training epoch etc).
# - E402: lazy imports inside functions are a documented pattern in this repo
#   (avoid bootstrap-time imports of heavy deps like torch in non-ml mode).
ignore = [
  "N803", "N806", "N814", "N815", "N817",  # ML naming conventions
  "B007",   # intentionally unused loop control (training epoch etc.)
  "E402",   # lazy imports inside functions (documented pattern here)
  "E501",   # line length — let black enforce
  "E741",   # ambiguous names O/I/l — conventional for bigfive / index vars
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
